# Soccermatics

./: .gitignore  README.md  basics.ipynb  pyproject.toml  statsbomb.py  wyscout.py
Notebooks/1_Visualising_Football/: Heatmaps.ipynb  Passing_Networks.ipynb  Plotting_Shots.ipynb
Notebooks/2_Models/: linear_regression.ipynb  xG_modelling.ipynb
Notebooks/3_Scouting/: Radar_Plots.ipynb
Notebooks/4_Valuing_Actions/: action_based_expected_threat.ipynb  markov_chains.ipynb  position_based_expected_threat.ipynb  possesion_chains.ipynb  possession_chains.ipynb
scripts/: data_processing.py
