[tool.poetry]
name = "soccermatics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
jupyterlab = "^4.0.9"
plotly = "^5.18.0"
seaborn = "^0.13.0"
mplsoccer = "^1.2.2"
tqdm = "^4.66.1"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
